<resources>
    <string name="app_name">Niplofy</string>
    <string name="content_description">image</string>
    <string name="title_sign_up">Let\'s get you Signed up! </string>
    <string name="title_login">SIGN IN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forget_password">Forget Password?</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="btn_lbl_login">Login</string>
    <string name="dont_have_an_account">Want an account?</string>
    <string name="register"><u>Sign Up</u></string>
    <string name="create_an_account">WELCOME TO NIPLOFY</string>
    <string name="safety_tips">SAFETY TIPS</string>
    <string name="recover_account">RECOVER ACCOUNT</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Sign In</u></string>
    <string name="err_msg_enter_first_name">Please Enter First Name.</string>
    <string name="err_msg_enter_last_name">Please Enter Last Name.</string>
    <string name="err_msg_enter_email">Please Enter A Valid E-mail.</string>
    <string name="err_msg_enter_password_cant_be_empty">Passweord Field Can not be Empty</string>
    <string name="err_msg_enter_password">Password Field Must contain: At least 4 characters, with 1 special Character, and no white space.</string>
    <string name="err_msg_enter_confirm_password">Confirm password Field Can not be empty.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree to terms and condition.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and E-mail address we\'ll send you an E-mail to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="register_success">Welcome To Niplofy. You are registered Successfully.</string>
    <string name="title_complete_profile">UPDATE PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="title_orders">Orders</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="action_add_product">Add Product</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_phone_num">Phone Number</string>
    <string name="et_hint_email_address">E-mail Address</string>
    <string name="et_hint_product_price">Product Price (₦)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_address">Product Address(City)</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_phone_num">Please enter phone number.</string>
    <string name="err_msg_email_address">Please enter mail address.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_address">Please enter product address.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="product_uploaded_success_message">Your product has been uploaded successfully.</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="sold_product_delete_success_message">Your Sold product is deleted successfully.</string>
    <string name="order_product_delete_success_message">Your Ordered product is deleted successfully.</string>
    <string name="sold_product_delivered_success_message">Your Sold product is delivered successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="delete_sold_dialog_message">Are you sure you want to delete the sold product?</string>
    <string name="delete_order_dialog_message">Are you sure you want to delete the ordered product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_address_description">Seller\'s Address</string>
    <string name="lbl_product_Phone_number_description">Seller\'s Phone Number</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">Product was added to your cart</string>
    <string name="error_message_item_added_to_cart">Your Product can not be added to your cart</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="product_warning">Do not pay in advance even for the delivery.</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="safety_tips_string">At Niplofy we are 100% committed to make your experience of selling and buying as safe as possible. Below are simple advices that will help to avoid the most common ways of scams and fraud.</string>
    <string name="stay_safe_on_niplofy">Stay safe on Niplofy</string>
    <string name="second_paragraph">We work continuously to ensure you have a safe, enjoyable experience. Our safety measures include:</string>
    <string name="third_paragraph">If you have been the victim of a scam, please report your situation to us immediately. If you have been cheated, we also recommend you to contact your local police department.
        Please, use our “Something wrong?” button on every Ad page to inform us of your issue.
        If you have been the victim of a scam, please report your situation to us immediately. If you have been cheated, we also recommend you to contact your local police department.
    </string>
    <string name="fourth_paragraph">Niplofy is committed to ensuring the privacy of its users and therefore does not share information about its users publicly. However, we are committed to the safety of our users and will cooperate with the police department if we receive any requests for information in connection with fraudulent or other criminal activity.</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_email_add">E-mail Address</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_email">Please enter E-mail Address.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="err_your_address_added_successfully">Your address was added successfully.</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address was updated successfully.</string>
    <string name="err_your_address_deleted_successfully">Your address was deleted successfully.</string>
    <string name="title_select_address">SELECT ADDRESS</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="order_status_in_process">In Process</string>
</resources>